--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-
+<body style="background-color:#3d3846;">
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
