--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#3d3846;">
-<h1>My First Heading</h1>
+<h1>Truth In it Of Itself </h1>
 
 <p>My first paragraph.</p>
 
