--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#3d3846;">
-<h1>Truth In it Of Itself </h1>
+<h1 style="color:aquamarine;">
+    Truth In it Of Itself </h1>
 
 <p>My first paragraph.</p>
 
