--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#3d3846;">
+
+<!-- Write your comments here  
 <h1 style="color:aquamarine;">
     Truth In it Of Itself </h1>
+-->
+<img src="truth.png" alt="cover" width="678" height="1079">
 
-<p>My first paragraph.</p>
+<p> 
+       This is a brief study of truth. Even though we may not yet have the complete truth in our hands, we can still study what it may be and what properties the object of truth possesses. If you are not familiar with the concepts of mathematics or some of Socratic ways of thinking, you might find it strange to call truth an object. But just hold on, in this book I will develop the ideas of the object of truth,  and soon we will be able to view the object of truth in it of itself.
+
+</p>
+
+<p> 
+    To understand truth we must first understand the search for truth and the different ways we conventionally search for it, and slowly notice that by changing the mechanism by which we search it, we change the definition of truth, and in turn the object at hand. In this manner this book is also an attempt to unify all those different definitions of truth.
+</p>
+
+<h2 style="color:aquamarine;">What is truth? </h2>
+
+<p>
+       We can understand truth as being the correct answer. In a way when someone tells the truth, he is answering or stating the facts correctly. When you tell your kid to tell the truth, what you mean is that he gives you an accurate description of what happened, not what he wants you to think that happened. 
+</p>
+
+<p>
+       In this manner the truth is the correct description, the right representation of reality. You can easily see how these concepts apply to simple questions, like “who has the most world cups?” and the correct answer, given the truth about what happened in the previous world cups would be “Brazil!!”. When describing historical events that are not subjective (like asking if someone or something was beneficial or not to history), then truth can be very straightforward.
+</p>
+
+<p>
+        Let us expand that concept as truth as the correct description to the realm of science, when we scientists search for the truth we search for the correct description of the material in which we work with, which is nature herself. 
+</p>
+
+<p>
+    The so longed for truth in science would be a theory, who would always explain all things, from the biggest stars, to the smallest particle. This brilliant theory would be able to explain the origins of life, of the universe, and all hard questions we can think of. Also abiding to the law of verification this theory would predict the behavior of any system, in infinitesimal precision.
+</p>
+
+<p>
+       That theory, for more idealized that it may seem, is the dream of any man or woman who searches to explain nature, be it in biology, physics or chemistry. The scientific method tries to get as close as it can to that theory, iterating on itself, by the process of the so infamous scientific method, that has proved incredibly accurate over the last five hundred years.
+</p>
+
+<p>
+       You see, every generation of scientist tries to connect the phenomenon they see around them with some sort of explanation, Newton proposed the law of universal gravitation, only to later be incorporated into a bigger theory that was the theory of relativity, just the same way biology can be explained or connected to chemistry which in turn is connected to the laws of quantum mechanics. 
+</p>
+
+<p>
+       Feynman had an amazing analogy for this, let's suppose the gods are playing a great game of chess, but you are allowed to look to a piece of the board from time to time, and from this observations you try to find out what the rules are, that dictates the movement of the pieces. Early on you notice how when there is only one bishop around, it always maintains its color, but later on you might discover that the law for the bishop is that it moves on the diagonal. And just like gravity, one explanation was incorporated into a larger one. The orbit of the planets, and this mysterious force, explained by the curvature of space-time.
+</p>
+
+<p>
+       In a way you can say that the law, the explanation, was always there, it always existed, but we don't know it from the start. So we use a process of guessing and verifying to try to find the rules. The rules of chess exist, even if we do not know them. Just the same way that the laws and patterns that govern the universe exist, even though we do not know them. 
+</p>
+
+<p>
+       This may seem of no importance, but it is interesting to see how the object itself, the pattern, the system that governs the great game, exists. And so we can begin to study its properties, and its implications.
+</p>
+
+<h3 style="color:aquamarine;">The many faces of truth. </h3>
 
 </body>
 </html>
